--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <body>
   <div class="course">
-    <div class="car"></div>
+    <div class="car">
+      <img src="images\f1.svg" alt="Car">
+    </div>
   </div>
 </body>
 
